# Inventory-Management

./: .gitignore  CMakeLists.txt  Inventory.c  MyFunctions.h  README.md  colors.h  cosmetic.c  functions.h  hashTable.c  inventory.c  menuUi.c
Backup/: inventory.csv
Data Backup/: .~lock.inventory.csv#
Reports/: .~lock.Slow_Stock.csv#  Bestsellers.csv  Low_Stock.csv  Slow_Stock.csv
data/: .~lock.DataSet.csv#  .~lock.inventory.csv#  DataSet.csv  inventory.csv
program/: CMakeLists.txt  Inventory.c  MyFunctions.h  hashTable.c
src/: functions.h  gui_handlers.c  gui_handlers.h  hashTable.c  main.c  ui.c
ui/: inventory.ui
